--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "multer-gridfs-storage": "^5.0.2"
   },
   "scripts": {
+    "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
