feature/APP-Implement-basic-user-authorization-flow
- Implement basic authorization
- Implement user model
- Implement auth route and basic controllers
- Refactor according to taken code style

--- a/.env
+++ b/.env
@@ -1,2 +1,9 @@
 MONGO_URL='mongodb+srv://iilin:Prkv4w5Z3qQbudUW@cluster0.36jofxu.mongodb.net/?retryWrites=true&w=majority'
 PORT=3001
+
+# JWT
+JWT_ACCESS_SECRET=v06d3UTH3LbRGYWYnfI7YFUB
+JWT_REFRESH_SECRET=LI1rOni3NBXWmDa2SV33GhZL
+
+JWT_ACCESS_LIFETIME=3600
+JWT_REFRESH_LIFETIME=86400
