enhancement/APP-Update-auth-flow
- Update auth flow storing auth tokens
- Update auth controller and endpoints
- Add Token model
- Implement logout and revoke tokens flow
- Refactor according to taken code style

--- a/.env
+++ b/.env
@@ -5,5 +5,5 @@ PORT=3001
 JWT_ACCESS_SECRET=v06d3UTH3LbRGYWYnfI7YFUB
 JWT_REFRESH_SECRET=LI1rOni3NBXWmDa2SV33GhZL
 
-JWT_ACCESS_LIFETIME=3600
+JWT_ACCESS_LIFETIME=120
 JWT_REFRESH_LIFETIME=86400
