--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-validator": "^7.0.1",
     "gridfs-stream": "^1.1.1",
     "helmet": "^7.1.0",
     "http-status-codes": "^2.3.0",
