feature/APP-Implement-reset-password-flow
- Implement forgot and reset password endpoints and functionality
- Refactor according to taken codes style

--- a/.env
+++ b/.env
@@ -4,6 +4,7 @@ PORT=3001
 # JWT
 JWT_ACCESS_SECRET=v06d3UTH3LbRGYWYnfI7YFUB
 JWT_REFRESH_SECRET=LI1rOni3NBXWmDa2SV33GhZL
+JWT_RESET_SECRET=A8s6bK3tR1oPq7xZ9eY4jG5
 
 JWT_ACCESS_LIFETIME=120
 JWT_REFRESH_LIFETIME=86400
